# KivrakAli-internship

./: .gitignore  README.md
docs/: go2_locomotion_report.md
go2_sim/container/: config_container.py  gait_go2.py  gait_teleop.py  lowstate_to_jointstate.py  ros_teleop_go2.py  scene_markers.py  setup_sim.sh  sim_headless.py  sportmode_to_odom.py
go2_sim/mac/: config_mac.py  demo_go2.py  key_teleop_go2.py  pose_go2.py
swarm_sim/: README.md  package.xml  setup.py
swarm_sim/launch/: multi_robot.launch.py
swarm_sim/models/: diff_robot.urdf.xacro
swarm_sim/swarm_sim/: coordinator.py  independent_goals.py
