<?xml version="1.0"?>
<package format="3">
  <name>swarm_sim</name>
  <version>0.1.0</version>
  <description>Multi-robot Gazebo bringup + coordinator skeleton (M1)</description>
  <maintainer email="you@example.com">Ali</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
